Minor corrections for horizontal scroll

--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body{
     overflow-x: hidden;
     width: 100vw;
     height: 100vh;
+    margin: 0;
 }
 .main{
-    width: 390px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,7 +68,6 @@ footer{
 
 .heatSource__title{
     align-self: flex-start;
-    padding-inline-start: 40px;
 }
 .heatSourceCard{
     position: relative;
@@ -119,7 +118,6 @@ footer{
 /*Room selection section*/
 .roomSelect__title{
     align-self: flex-start;
-    padding-inline-start: 40px;
 }
 .roomSelectCard{
     position: relative;
@@ -150,6 +148,7 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
 }
 .roomSelectRooms__roomTitle{
     margin: 0;
